# StockO

./: NVDA.txt  StockO.ipynb  main.py  pyproject.toml
src/: chunking.py  data_loader.py  models.py  prompt_builder.py  rag_pipeline.py  retrieval.py
