[project]
name = "stocko"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.10",
    "llama-index-core>=0.14.15",
    "llama-index-embeddings-langchain>=0.4.1",
    "sentence-transformers>=5.2.3",
]
